--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
        
         <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect tabMenu">
                 <div class="mdl-tabs__tab-bar" style="-webkit-justify-content: left;">
-                    <a href="#starks-panel" class="mdl-tabs__tab is-active">Web</a>
+                    <a href="#starks-panel" class="mdl-tabs__tab" style="border-bottom: solid 3px #26a720; color:black;">Web</a>
                     <a href="#lannisters-panel" class="mdl-tabs__tab">Images</a>
                     <a href="#targaryens-panel" class="mdl-tabs__tab">Videos</a>
                     <a href="#starks-panel" class="mdl-tabs__tab ">News</a>
@@ -71,13 +71,13 @@
       </header>
   <main>
         <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect tabMenu">
-                <div class="mdl-tabs__tab-bar" style="-webkit-justify-content: left;">
-                    <a href="#starks-panel" style="height:80%;" class="mdl-tabs__tab"><img src="flag.svg"  style="height:60%;" alt=""/> USA </a>
-                    <a href="#lannisters-panel" class="mdl-tabs__tab">Any Time</a>
+                <div class="mdl-tabs__tab-bar" style="-webkit-justify-content: left; border-bottom:none;">
+                    <a href="" style="height:80%;" class="mdl-tabs__tab mytab"><img src="flag.svg"  style="height:60%;" alt=""/> USA  </a><i class="material-icons" style="margin-top:13px;padding-right:10px;">arrow_drop_down</i>
+                    <a href="#lannisters-panel" class="mdl-tabs__tab mytab">Any Time </a><i class="material-icons" style="margin-top:13px;padding-right:10px;">arrow_drop_down</i>
                    
                 </div>
         <div>
-                About 23,600,000 safe results
+               <h6 style="color:#26a720; margin-top:0;">About 23,600,000 safe results</h6> 
         </div>
   </main>
     </div>
