--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
         <div>
           <br>
-               <h6 style="color:#26a720; margin-top:0;">About 23,600,000 safe results</h6> 
+               <h6 style="color:#26a720; margin-top:0;"><img src="safe.png" height="22" width="24"/>About 23,600,000 safe results</h6> 
         </div>
         <div class="mdl-grid searchResult">
           <div class="mdl-cell mdl-cell--6-col searchResult">
@@ -255,18 +255,18 @@
     <tr valign="top"><td>
       
     </td>
-    <td><span ></span>1</td>
-      <td><a aria-label="Page 2"  href="#"> <span class="csb ch" ></span>2</a></td>
-        <td><a aria-label="Page 3"  href="#"><span class="csb ch" ></span>3</a></td>
-        <td><a aria-label="Page 4"  href="#"><span class="csb ch"  ></span>4</a></td>
-        <td><a aria-label="Page 5"  href="#"><span class="csb ch" ></span>5</a></td>
-        <td><a aria-label="Page 6"  href="#"><span class="csb ch" ></span>6</a></td>
-        <td><a aria-label="Page 7"  href="#"><span class="csb ch" ></span>7</a></td>
-        <td><a aria-label="Page 8"  href="#"><span class="csb ch" ></span>8</a></td>
-        <td><a aria-label="Page 9" href="#"><span class="csb ch" ></span>9</a></td>
-        <td><a aria-label="Page 10"  href="#"><span class="csb ch" ></span>10</a></td>
-        <td><a  href="#" id="pnnext" ><span >...</span></a></tb>
-          <td> <a  href="#" id="pnnext" ><span style="display:block;margin-left:10px"> Next >></span></a></td>
+    <td><a aria-label="Page 2" class="navbarFooter1"  href="#"> <span class="" ></span>1</a></td>
+      <td><a aria-label="Page 2" class="navbarFooter"  href="#"> <span class="csb ch" ></span>2</a></td>
+        <td><a aria-label="Page 3" class="navbarFooter" href="#"><span class="csb ch" ></span>3</a></td>
+        <td><a aria-label="Page 4" class="navbarFooter" href="#"><span class="csb ch"  ></span>4</a></td>
+        <td><a aria-label="Page 5" class="navbarFooter" href="#"><span class="csb ch" ></span>5</a></td>
+        <td><a aria-label="Page 6" class="navbarFooter" href="#"><span class="csb ch" ></span>6</a></td>
+        <td><a aria-label="Page 7" class="navbarFooter" href="#"><span class="csb ch" ></span>7</a></td>
+        <td><a aria-label="Page 8" class="navbarFooter"  href="#"><span class="csb ch" ></span>8</a></td>
+        <td><a aria-label="Page 9" class="navbarFooter" href="#"><span class="csb ch" ></span>9</a></td>
+        <td><a aria-label="Page 10" class="navbarFooter" href="#"><span class="csb ch" ></span>10</a></td>
+        <td><a  href="#" id="pnnext" class="navbarFooter" ><span >...</span></a></tb>
+          <td> <a  href="#"  class="navbarFooter1" id="pnnext" ><span style="display:block;margin-left:10px"> Next >></span></a></td>
       </tr>
     </tbody>
   </table>
