--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 
             </div>
             <div class="mdl-card__actions mdl-card--border">
-              <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+              <a href="https://www.avira.com" class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
                 More about Avira
               </a>
             </div>
