--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
          </div>
           
           <div class="mdl-cell mdl-cell--5-col mdl-cell--1-offset-desktop"><div class="demo-card-wide mdl-card mdl-shadow--2dp">
-            <div class="mdl-card__title">
-              <h2 class="mdl-card__title-text">Avira</h2>
+            <div class="mdl-card__title" style="height: 100px; ">
+            <span> <h1 class="mdl-card__title-text"  style="color:black;">Avira</h1></span>   <span> <img src="Avira_Logo.jpg" style="width:30%; float:right;" alt="logo"/></span>
             </div>
-            <div class="mdl-card__supporting-text">
+            <div class="mdl-card__supporting-text" style="width:100%;">
                 Avira Operations GmbH &amp; Co. KG is a German multinational security software company that provides antivirus software, Internet Security, Privacy, Identity and Performance tools for computers, smartphones, servers and networks, delivered as both software and cloud-based services.
                 
             </div>
