--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="mdl-card__title" style="height: 100px; ">
             <span> <h1 class="mdl-card__title-text"  style="color:black;">Avira</h1></span>   <span> <img src="Avira_Logo.jpg" style="width:30%; float:right;" alt="logo"/></span>
             </div>
-            <div class="mdl-card__supporting-text" style="width:100%;">
+            <div class="mdl-card__supporting-text" >
                 Avira Operations GmbH &amp; Co. KG is a German multinational security software company that provides antivirus software, Internet Security, Privacy, Identity and Performance tools for computers, smartphones, servers and networks, delivered as both software and cloud-based services.
                 
             </div>
