--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
              </script>
 
                       <ul for="language" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                          <li class="mdl-menu__item" data-val="USA" id="USA" onclick="checkdataTime(this)">Any time</li>
-                          <li class="mdl-menu__item" data-val="BLR" id="GER" onclick="checkdataTime(this)">Last week</li>
-                          <li class="mdl-menu__item" data-val="RUS" id="RUS" onclick="checkdataTime(this)">Last Month</li>
+                          <li class="mdl-menu__item" data-val="USA" id="USA" onclick="checkdataTime(this)">English</li>
+                          <li class="mdl-menu__item" data-val="BLR" id="GER" onclick="checkdataTime(this)">German</li>
+                          <li class="mdl-menu__item" data-val="RUS" id="Sp" onclick="checkdataTime(this)">Spanish</li>
                       </ul>
 
                     <!--  <ul for="feedback" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
@@ -62,9 +62,9 @@
                       </ul> -->
 
                       <ul for="menu" class="mdl-menu mdl-menu--bottom-right mdl-js-menu">
-                          <li class="mdl-menu__item" data-val="USA" id="USA" onclick="checkdataTime(this)">Any time</li>
-                          <li class="mdl-menu__item" data-val="BLR" id="GER" onclick="checkdataTime(this)">Last week</li>
-                          <li class="mdl-menu__item" data-val="RUS" id="RUS" onclick="checkdataTime(this)">Last Month</li>
+                          <li class="mdl-menu__item" data-val="USA" id="USA" onclick="checkdataTime(this)">About Us</li>
+                          <li class="mdl-menu__item" data-val="BLR" id="GER" onclick="checkdataTime(this)">Terms</li>
+                          <li class="mdl-menu__item" data-val="RUS" id="RUS" onclick="checkdataTime(this)">Feedback</li>
                       </ul>
 
                       <div class="mdl-layout__drawer">
