--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div>
        
         <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect tabMenu">
-                <div class="mdl-tabs__tab-bar" style="-webkit-justify-content: left;">
+                <div class="mdl-tabs__tab-bar menuTabs" style="-webkit-justify-content: left;">
                     <a href="#starks-panel" class="mdl-tabs__tab is-active" style=" color:black;">Web</a>
                     <a href="#lannisters-panel" class="mdl-tabs__tab">Images</a>
                     <a href="#targaryens-panel" class="mdl-tabs__tab">Videos</a>
