--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           
          </div>
           
-          <div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-cell--order-1-tablet mdl-cell--order-1-phone mdl-cell--order-2-desktop mdl-cell--1-offset-desktop"><div class="demo-card-wide mdl-card mdl-shadow--2dp">
+          <div class="mdl-cell mdl-cell--5-col mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-cell--order-1-tablet mdl-cell--order-1-phone mdl-cell--order-2-desktop mdl-cell--1-offset-desktop "><div class="demo-card-wide mdl-card mdl-shadow--2dp infoCard">
             <div class="mdl-card__title" style="height: 100px; ">
             <span> <h1 class="mdl-card__title-text"  style="color:black;">Avira</h1></span>   <span> <img src="Avira_Logo.jpg" style="width:30%; float:right;" alt="logo"/></span>
             </div>
