--- a/search.html
+++ b/search.html
@@ -152,8 +152,36 @@
 
 
             <div id="mybutton">
-                <button class="feedback"> <img  class="mdl-navigation__link" src="feedback.svg" alt="language" style="height:60%;" /> Feedback</button>
-                </div>
+                <div class="demo-card-square mdl-card mdl-shadow--2dp" id="feedbackdialog" style="display:none;min-height: 100%;">
+                    <div class="mdl-card__title mdl-card--expand">
+                      <h2 class="mdl-card__title-text">Tell us what you think</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      Aenan convallis.
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border" style="text-align:center;">
+                      <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"  onclick="sendFeedback()">
+                       Send
+                      </a>
+                    </div>
+                  </div>
+                <button class="feedback" id="feedbackbtn" onclick="showDialog()" style="display:block;"> <img  class="mdl-navigation__link" src="feedback.svg" alt="language" style="height:60%;" /> Feedback</button>
+               
+            
+              </div>
+              <script>
+
+              function showDialog(){
+document.getElementById("feedbackdialog").style.display="block";
+document.getElementById("feedbackbtn").style.display="none";
+              }
+
+              function sendFeedback(){
+                document.getElementById("feedbackdialog").style.display="none";
+document.getElementById("feedbackbtn").style.display="block";
+              }
+              </script>
   <main lass="mdl-layout__content">
  
       <div class="mdl-grid searchResult" style="margin:auto 0;">
