--- a/search.html
+++ b/search.html
@@ -151,9 +151,9 @@
 
 
 
-            <div id="mybutton">
+            <div id="mybutton" style="display:block;">
                 <div class="demo-card-square mdl-card mdl-shadow--2dp" id="feedbackdialog" style="display:none;min-height: 100%;">
-                    <div class="mdl-card__title mdl-card--expand">
+                    <div class="mdl-card__title mdl-card--expand" >
                       <h2 class="mdl-card__title-text">Tell us what you think</h2>
                     </div>
                     <div class="mdl-card__supporting-text">
