--- a/search.html
+++ b/search.html
@@ -126,7 +126,7 @@
         <div class="demo-drawer mdl-layout__drawer-right">
            <br>
             <ul> <img src="avira.png" style="width:9%;" /> <span style="text-transform: uppercase;
-              font-size: 0.85em;">Avira Product</span>
+              font-size: 0.85em;">Avira Products</span>
               <li class="listMenu">Internet Security Suite</li>
               <li class="listMenu">VPN</li>         
               <li class="listMenu">Avira System Speedup</li>
